--- a/package.json
+++ b/package.json
@@ -16,18 +16,26 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.1",
+    "@codegenie/serverless-express": "^4.16.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "aws-amplify": "^6.14.4",
+    "cognito-express": "^3.0.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.799.0",
+    "@aws-sdk/lib-dynamodb": "^3.799.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
@@ -36,6 +44,7 @@
     "aws-cdk": "^2.1013.0",
     "aws-cdk-lib": "^2.193.0",
     "npm-run-all": "^4.1.5",
+    "serverless-offline": "^14.4.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
     "vite-tsconfig-paths": "^5.1.4"
