--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@config": ["./frontend/config"],
-      "@apiRoutes": ["./constants/routes.ts"]
+      "@apiRoutes": ["./commons/routes.ts"],
+      "@helpers/*": ["./commons/helpers/*"],
+      "@src-types/*": ["./commons/types/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
