--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "source ./scripts/local-vars.sh && npm-run-all -p 'local:*'",
-    "local:backend": "echo 'No backend to run locally'",
+    "local:backend": "cd src/backend/api && sls offline -t",
     "local:frontend": "source ./scripts/frontend-vars.sh && vite --config ./src/frontend/vite.config.ts",
     "deploy": "npm-run-all -p 'deploy:*'",
     "deploy:infra": "source ./scripts/infra-deploy.sh"
@@ -17,6 +17,9 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.1",
     "@codegenie/serverless-express": "^4.16.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
