--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
     /* Language and Environment */
-    "target": "ES2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "target": "ES2018" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "jsx": "react-jsx" /* Specify what JSX code is generated. */,
     // "libReplacement": true,                           /* Enable lib replacement. */
@@ -34,7 +34,10 @@
       "@config": ["./frontend/config"],
       "@apiRoutes": ["./commons/routes.ts"],
       "@helpers/*": ["./commons/helpers/*"],
-      "@src-types/*": ["./commons/types/*"]
+      "@src-types/*": ["./commons/types/*"],
+
+      // specific for frontend -- // TODO: move to separate tsconfig
+      "@apiHandler": ["./frontend/services/apis/handler.ts"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
